--- a/js-aimtrainer-frontend/styles/main.css
+++ b/js-aimtrainer-frontend/styles/main.css
@@ -16,3 +16,42 @@ div#title {
     text-align: center;
 
 }
+
+h4 {
+    font-family: "OCR A Std", monospace;
+    color: #FFFFFF;
+}
+
+#form-label {
+    font-family: "OCR A Std", monospace;
+    color: #FFFFFF;
+}
+
+#application {
+    display: flex;
+    width: 100%
+}
+
+#application > div:nth-child(2) {
+    flex: 1;
+}
+
+#user-info {
+
+}
+
+#game {
+
+}
+
+#high-scores {
+
+}
+
+#comments {
+    width: 100%;
+}
+
+#commment-title {
+    text-align: center;
+}
