--- a/js-aimtrainer-frontend/styles/main.css
+++ b/js-aimtrainer-frontend/styles/main.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: #000000;
+    background-color: #FFFFFF;
 }
 
 div#application {
@@ -10,21 +10,21 @@ div#application {
 }
 
 div#title {
-    background-color: #000000;
+    background-color: #FFFFFF;
     font-family: "OCR A Std", monospace;
-    color: #FFFFFF;
+    color: #000000;
     text-align: center;
 
 }
 
 h4 {
     font-family: "OCR A Std", monospace;
-    color: #FFFFFF;
+    color: #000000;
 }
 
 #form-label {
     font-family: "OCR A Std", monospace;
-    color: #FFFFFF;
+    color: #000000;
 }
 
 #application {
@@ -60,11 +60,12 @@ h4 {
  width: 30px;
  height: 30px;
  text-align: center;
+ float: right;
  border: 3px solid white ;
  background: red;
  color: white;
  font-size: medium;
- border-radius: 15px;
+ border-radius: 0px;
 }
 
 .deleteButton:hover {
@@ -74,10 +75,13 @@ h4 {
 }
 
 .a-comment {
-    background-color: black;
-    border: 5px solid white;
-    color: white;
-    padding: 10px;
+    background-color: #FFFFFF;
+    border-radius: 25px;
+    border: 2px solid #000000;
+    padding: 20px;
+    color: #000000;
+    margin: 20px;
+
 
     height: 10;
     text-align: left;
@@ -88,9 +92,9 @@ canvas {
 }
 
 p {
-    color :#FFFFFF
+    color :#000000
 }
 
 h5{
-    color: #FFFFFF
+    color: #000000
 }
