--- a/js-aimtrainer-frontend/styles/main.css
+++ b/js-aimtrainer-frontend/styles/main.css
@@ -48,9 +48,7 @@ h4 {
     text-align: center;
 }
 
-#comments {
-    width: 100%;
-}
+
 
 #commment-title {
     text-align: center;
@@ -111,6 +109,15 @@ h5{
 }
 
 #login {
+    background-color: #FFFFFF;
+    border-radius: 25px;
+    border: 2px solid #000000;
+    padding: 20px;
+    color: #000000;
+    margin: 15px;
+}
+
+#comments-section {
     background-color: #FFFFFF;
     border-radius: 25px;
     border: 2px solid #000000;
