--- a/js-aimtrainer-frontend/styles/main.css
+++ b/js-aimtrainer-frontend/styles/main.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: #FFFFFF;
+    background-color: #F0F8FF;
 }
 
 div#application {
@@ -10,7 +10,7 @@ div#application {
 }
 
 div#title {
-    background-color: #FFFFFF;
+    background-color: #F0F8FF;
     font-family: "OCR A Std", monospace;
     color: #000000;
     text-align: center;
@@ -59,29 +59,25 @@ h4 {
  height: 30px;
  text-align: center;
  float: right;
- border: 3px solid white ;
- background: red;
- color: white;
+ border: 3px solid #F5F5F5 ;
+ background: #F5F5F5;
+ color: #000000;
  font-size: medium;
  border-radius: 0px;
 }
 
 .deleteButton:hover {
-    background: black;
-    color: red;
-    border-color: white;
+    background: #F0F8FF;
+    color: #000000;
 }
 
 .a-comment {
-    background-color: #FFFFFF;
+    background-color:#F5F5F5;
     border-radius: 25px;
     border: 2px solid #000000;
     padding: 20px;
     color: #000000;
     margin: 20px;
-
-
-    height: 10;
     text-align: left;
 }
 
@@ -100,7 +96,7 @@ h5{
 }
 
 #loggedInUser {
-    background-color: #FFFFFF;
+    background-color: #F5F5F5;
     border-radius: 25px;
     border: 2px solid #000000;
     padding: 20px;
@@ -109,7 +105,7 @@ h5{
 }
 
 #login {
-    background-color: #FFFFFF;
+    background-color: #F5F5F5;
     border-radius: 25px;
     border: 2px solid #000000;
     padding: 20px;
@@ -118,7 +114,7 @@ h5{
 }
 
 #comments-section {
-    background-color: #FFFFFF;
+    background-color: #F5F5F5;
     border-radius: 25px;
     border: 2px solid #000000;
     padding: 20px;
@@ -127,7 +123,7 @@ h5{
 }
 
 #signup {
-    background-color: #FFFFFF;
+    background-color: #F5F5F5;
     border-radius: 25px;
     border: 2px solid #000000;
     padding: 20px;
@@ -136,7 +132,7 @@ h5{
 }
 
 .high-scores {
-    background-color: #FFFFFF;
+    background-color: #F5F5F5;
     border-radius: 25px;
     border: 2px solid #000000;
     padding: 20px;
